--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url = jdbc:mysql://localhost:3306/api-cadastro-pessoas?usqSSL=false&serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password = Bd123456@
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql = true
 
+spring.jpa.hibernate.ddl-auto= create-drop
